--- a/css/style.scss
+++ b/css/style.scss
@@ -483,6 +483,16 @@ html {
                 justify-content: center;
               }
             }
+
+            article{
+              ul{
+                li{
+                  img{
+                    height: 3rem;
+                }
+              }
+              }
+            }
           }
         }
 
