--- a/css/style.css
+++ b/css/style.css
@@ -367,10 +367,65 @@ html body main #values div ul li {
   margin-bottom: 10%;
   width: 30%;
   font-size: 1.2rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  cursor: pointer;
 }
 
 html body main #values div ul li img {
   height: 5rem;
+}
+
+html body main #values div ul li:hover {
+  background-color: black;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+html body main #values article {
+  z-index: 1;
+  display: none;
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.6);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0 2rem;
+}
+
+html body main #values article div {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #353535;
+  padding: 3rem;
+}
+
+html body main #values article div h3 {
+  font-size: 3.5rem;
+  margin: 0;
+}
+
+html body main #values article div img {
+  width: 50%;
+  margin: 3rem;
+}
+
+html body main #values article div p {
+  margin: 0;
 }
 
 html body footer {
@@ -569,6 +624,12 @@ html body footer ul li img {
             align-items: center;
   }
   html body main #values div ul li {
+    width: 100%;
+  }
+  html body main #values article div {
+    width: 90%;
+  }
+  html body main #values article div img {
     width: 100%;
   }
   h1 {
