--- a/css/style.scss
+++ b/css/style.scss
@@ -304,13 +304,61 @@ html {
               margin-bottom: 10%;
               width: 30%;
               font-size: 1.2rem;
+              transition: $transition;
+              cursor: pointer;
 
               img{
                 height: 5rem;
               }
+
+            }
+            li:hover{
+              background-color: black;
+              transition: $transition;
             }
           }
         }
+
+        article{
+          z-index: 1;
+          display: none;
+          position: fixed;
+          background-color: rgba(255, 255, 255, 0.6);
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          padding: 0 2rem;
+          
+          div{
+            position: fixed;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #353535;
+            padding: 3rem;
+
+            h3{
+              font-size: 3.5rem;
+              margin: 0;
+            }
+
+            img{
+              width: 50%;
+              margin: 3rem;
+            }
+
+            p{
+              margin: 0;
+            }
+
+          }
+
+        }
+        
       }
     }
 
@@ -515,7 +563,17 @@ html {
                 width: 100%;
               }
             }
-          }      
+          }
+          article{
+            
+            div{
+              width: 90%;
+
+              img{
+                width: 100%;
+              }
+            }
+          }
         }
       }
     }
