--- a/css/style.scss
+++ b/css/style.scss
@@ -66,7 +66,7 @@ html {
       top: 0;
       right: 0;
       left: 0;
-      // z-index: 998;
+      z-index: 1000;
 
       img {
         height: 2rem;
@@ -194,61 +194,61 @@ html {
         flex-direction: column;
         align-items: center;
         background-color: rgb(50,50,50);
-
+        
         div{
           width: 100%;
-  
+          
           h3 {
             margin: 0;
             text-align: center;
           }
-  
+          
           h4 {
             font-size: 1.5rem;
             text-decoration: underline;
             margin: 0;
             text-align: center;
           }
-  
+          
           /* ----------- SELECTION ----------------- */
           #selection {
             display: flex;
             // justify-content: space-between;
-  
+            
             li {
               display: flex;
               justify-content: center;
               align-items: center;
               flex-grow: 1;
               cursor: pointer;
-  
+              
               img {
                 height: 2rem;
               }
-  
+              
               p {
                 margin: 0.5rem;
               }
             }
-  
+            
             li:hover {
               background-color: #000;
               color: #fff;
             }
-  
+            
           }
           
           article {
             border-radius: 1rem;
             margin: 0;
             display: none;
-  
+            
             ul {
               display: flex;
               justify-content: space-around;
               flex-wrap: wrap;
               margin-top: 1rem;
-  
+              
               li {
                 padding: 1rem;
                 display: flex;
@@ -257,11 +257,11 @@ html {
                 align-items: center;
                 // max-width: 6rem;
                 width: 33%;
-  
+                
                 img {
                   height: 4.5rem;
                 }
-  
+                
                 p {
                   font-size: 1rem;
                   text-align: center;
@@ -270,23 +270,112 @@ html {
               }
             }
           }
-
+          
           #transverse_article {
             display: block;
           }
-  
+          
           .lign {
             display: flex;
           }
         }
         
       }
+      
+      /* ------------------ PROJECTS --------------------------*/
+      #projects{
+        background-color: rgb(70,70,70);
 
+        div{
+          .carousel_wrapper{
+            overflow: hidden;
+
+            .carousel{
+              transform-style: preserve-3d;
+
+              .carousel_photo{
+                opacity: 0;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                // width: 100%;
+                max-width: 100%;
+                margin: 0;
+                padding: 1rem 4rem;
+                z-index: 100;
+                transition: transform 1s, opacity 1s, z-index 1s;
+              }
+
+              .carousel_photo.prev,
+              .carousel_photo.next{
+                // z-index: 800;
+                opacity: 0;
+              }
+
+              .carousel_photo.prev{
+                transform: translateX(-100%);
+              }
+
+              .carousel_photo.next{
+                transform: translateX(100%);
+              }
+
+              .carousel_photo.active{
+                opacity: 1;
+                position: relative;
+                z-index: 900;
+              }
+
+              #carousel_button_next,
+              #carousel_button_prev{
+                position: absolute;
+                top: 50%;
+                width: 3rem;
+                height: 3rem;
+                background-color: #fff;
+                transform: translateY(-50%);
+                border-radius: 50%;
+                cursor: pointer;
+                z-index: 901;
+                border: 1px solid black;
+              }
+
+              #carousel_button_prev{
+                left: 0;
+              }
+
+              #carousel_button_next{
+                right: 0;
+              }
+
+              #carousel_button_prev::after,
+              #carousel_button_next::after{
+                content: " ";
+                position: absolute;
+                width: 10px;
+                height: 10px;
+                top: 50%;
+                left: 54%;
+                border-right: 2px solid black;
+                border-bottom: 2px solid black;
+                transform: translate(-50%, -50%) rotate(135deg);
+              }
+
+              #carousel_button_next::after{
+                left: 47%;
+                transform: translate(-50%, -50%) rotate(-45deg);
+              }
+            }
+          }
+        }
+      }
+      
       /* ------------------- VALUES ---------------------------*/
       #values{
-        background-color: rgb(70, 70, 70);
+        background-color: rgb(50, 50, 50);
         height: calc(100vh - 2* $nav-height);
-
+        
         div{
 
           ul {
@@ -484,9 +573,7 @@ html {
 
       main{
         /* ------------------- HOME -----------------------------*/
-        // #home{
-        //   grid-template-rows: 45% 25% 20% auto;
-        // }
+
 
         /* ------------------- PRESENTATION ---------------------*/
         #presentation{
