--- a/css/style.css
+++ b/css/style.css
@@ -341,77 +341,86 @@ html body main #projects {
   background-color: #333333;
 }
 
-html body main #projects div .carousel_wrapper {
+html body main #projects div .carousel {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   overflow: hidden;
 }
 
-html body main #projects div .carousel_wrapper .carousel {
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+html body main #projects div .carousel article {
+  background-color: #464646;
+  margin-bottom: 3rem;
+  cursor: pointer;
+  -webkit-transition: opacity .5s, z-index .5s, -webkit-transform .5s;
+  transition: opacity .5s, z-index .5s, -webkit-transform .5s;
+  transition: transform .5s, opacity .5s, z-index .5s;
+  transition: transform .5s, opacity .5s, z-index .5s, -webkit-transform .5s;
+  width: 80%;
+  height: 60vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 1rem;
 }
 
-html body main #projects div .carousel_wrapper .carousel .carousel_photo {
-  opacity: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+html body main #projects div .carousel article img {
   max-width: 100%;
-  margin: 0;
-  padding: 1rem 4rem;
-  z-index: 100;
-  -webkit-transition: opacity 1s, z-index 1s, -webkit-transform 1s;
-  transition: opacity 1s, z-index 1s, -webkit-transform 1s;
-  transition: transform 1s, opacity 1s, z-index 1s;
-  transition: transform 1s, opacity 1s, z-index 1s, -webkit-transform 1s;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
-html body main #projects div .carousel_wrapper .carousel .carousel_photo.prev,
-html body main #projects div .carousel_wrapper .carousel .carousel_photo.next {
+html body main #projects div .carousel .prev,
+html body main #projects div .carousel .next {
+  position: absolute;
   opacity: 0;
 }
 
-html body main #projects div .carousel_wrapper .carousel .carousel_photo.prev {
+html body main #projects div .carousel .prev {
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
 }
 
-html body main #projects div .carousel_wrapper .carousel .carousel_photo.next {
+html body main #projects div .carousel .next {
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
 }
 
-html body main #projects div .carousel_wrapper .carousel .carousel_photo.active {
+html body main #projects div .carousel .active {
   opacity: 1;
   position: relative;
   z-index: 900;
 }
 
-html body main #projects div .carousel_wrapper .carousel #carousel_button_next,
-html body main #projects div .carousel_wrapper .carousel #carousel_button_prev {
-  position: absolute;
+html body main #projects div .carousel #carousel_button_next,
+html body main #projects div .carousel #carousel_button_prev {
+  margin-right: 0;
+  margin-left: 0;
+  position: relative;
   top: 50%;
   width: 3rem;
   height: 3rem;
   background-color: #fff;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
   border-radius: 50%;
   cursor: pointer;
   z-index: 901;
-  border: 1px solid black;
 }
 
-html body main #projects div .carousel_wrapper .carousel #carousel_button_prev {
-  left: 0;
-}
-
-html body main #projects div .carousel_wrapper .carousel #carousel_button_next {
-  right: 0;
-}
-
-html body main #projects div .carousel_wrapper .carousel #carousel_button_prev::after,
-html body main #projects div .carousel_wrapper .carousel #carousel_button_next::after {
+html body main #projects div .carousel #carousel_button_prev::after,
+html body main #projects div .carousel #carousel_button_next::after {
   content: " ";
   position: absolute;
   width: 10px;
@@ -424,7 +433,7 @@ html body main #projects div .carousel_wrapper .carousel #carousel_button_next::
           transform: translate(-50%, -50%) rotate(135deg);
 }
 
-html body main #projects div .carousel_wrapper .carousel #carousel_button_next::after {
+html body main #projects div .carousel #carousel_button_next::after {
   left: 47%;
   -webkit-transform: translate(-50%, -50%) rotate(-45deg);
           transform: translate(-50%, -50%) rotate(-45deg);
