--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
                         GENERAL
 ----------------------------------------------------------*/
 h1,
-h2 {
+h2,
+h3 {
   font-family: "Source Code Pro", monospace;
   text-align: center;
   text-transform: uppercase;
@@ -19,6 +20,15 @@ h1 {
 h2 {
   font-size: 4rem;
   margin-top: 0;
+}
+
+h3 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+p {
+  font-size: 1.2rem;
 }
 
 main a {
@@ -341,7 +351,7 @@ html body main #projects {
   background-color: #333333;
 }
 
-html body main #projects div .carousel {
+html body main #projects #projects_carousel .carousel {
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   display: -webkit-box;
@@ -357,10 +367,9 @@ html body main #projects div .carousel {
   overflow: hidden;
 }
 
-html body main #projects div .carousel article {
+html body main #projects #projects_carousel .carousel article {
   background-color: #464646;
   margin-bottom: 3rem;
-  cursor: pointer;
   -webkit-transition: opacity .5s, z-index .5s, -webkit-transform .5s;
   transition: opacity .5s, z-index .5s, -webkit-transform .5s;
   transition: transform .5s, opacity .5s, z-index .5s;
@@ -376,37 +385,38 @@ html body main #projects div .carousel article {
   padding: 1rem;
 }
 
-html body main #projects div .carousel article img {
+html body main #projects #projects_carousel .carousel article img {
   max-width: 100%;
   max-height: 100%;
   -o-object-fit: contain;
      object-fit: contain;
 }
 
-html body main #projects div .carousel .prev,
-html body main #projects div .carousel .next {
+html body main #projects #projects_carousel .carousel .prev,
+html body main #projects #projects_carousel .carousel .next {
   position: absolute;
   opacity: 0;
 }
 
-html body main #projects div .carousel .prev {
+html body main #projects #projects_carousel .carousel .prev {
   -webkit-transform: translateX(-100%);
           transform: translateX(-100%);
 }
 
-html body main #projects div .carousel .next {
+html body main #projects #projects_carousel .carousel .next {
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
 }
 
-html body main #projects div .carousel .active {
+html body main #projects #projects_carousel .carousel .active {
   opacity: 1;
+  cursor: pointer;
   position: relative;
   z-index: 900;
 }
 
-html body main #projects div .carousel #carousel_button_next,
-html body main #projects div .carousel #carousel_button_prev {
+html body main #projects #projects_carousel .carousel #carousel_button_next,
+html body main #projects #projects_carousel .carousel #carousel_button_prev {
   margin-right: 0;
   margin-left: 0;
   position: relative;
@@ -419,8 +429,8 @@ html body main #projects div .carousel #carousel_button_prev {
   z-index: 901;
 }
 
-html body main #projects div .carousel #carousel_button_prev::after,
-html body main #projects div .carousel #carousel_button_next::after {
+html body main #projects #projects_carousel .carousel #carousel_button_prev::after,
+html body main #projects #projects_carousel .carousel #carousel_button_next::after {
   content: " ";
   position: absolute;
   width: 10px;
@@ -433,7 +443,7 @@ html body main #projects div .carousel #carousel_button_next::after {
           transform: translate(-50%, -50%) rotate(135deg);
 }
 
-html body main #projects div .carousel #carousel_button_next::after {
+html body main #projects #projects_carousel .carousel #carousel_button_next::after {
   left: 47%;
   -webkit-transform: translate(-50%, -50%) rotate(-45deg);
           transform: translate(-50%, -50%) rotate(-45deg);
@@ -441,7 +451,6 @@ html body main #projects div .carousel #carousel_button_next::after {
 
 html body main #values {
   background-color: #464646;
-  height: calc(100vh - 2* $nav-height);
 }
 
 html body main #values div ul {
@@ -485,52 +494,6 @@ html body main #values div ul li:hover {
   background-color: black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-}
-
-html body main #values article {
-  z-index: 1;
-  display: none;
-  position: fixed;
-  background-color: rgba(255, 255, 255, 0.6);
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  padding: 0 2rem;
-}
-
-html body main #values article div {
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  background-color: #333333;
-  padding: 3rem;
-}
-
-html body main #values article div h3 {
-  font-size: 3.5rem;
-  margin: 0;
-}
-
-html body main #values article div img {
-  width: 50%;
-  margin: 3rem;
-}
-
-html body main #values article div p {
-  margin: 0;
 }
 
 html body footer {
@@ -591,6 +554,10 @@ html body footer ul li img {
   transition: 0.5s;
 }
 
+.btn img {
+  max-height: 2rem;
+}
+
 .btn:hover {
   background-color: black;
   color: white;
@@ -608,6 +575,82 @@ html body footer ul li img {
   background-color: #32b6ce;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+}
+
+.modalBackground {
+  z-index: 1001;
+  display: none;
+  position: fixed;
+  background-color: rgba(255, 255, 255, 0.6);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 0 2rem;
+}
+
+.modalBackgroundDisplay {
+  display: block;
+}
+
+.modal {
+  position: fixed;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #333333;
+  padding: 3rem;
+}
+
+.modal div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.modal div img {
+  width: 50%;
+  margin-right: 2rem;
+}
+
+.modal div div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+}
+
+.modal div div p {
+  margin-top: 0;
+}
+
+.modal div div ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.modal div div ul a img {
+  margin: auto;
+}
+
+.modalDisplay {
+  display: block;
 }
 
 /* ----------------------------------------------------------
