--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ html body {
   color: white;
   height: 100%;
   /* ------------------- NAV -----------------------------*/
+  /* ------------------- MODALS ---------------------------*/
   /* ------------------- FOOTER ---------------------------*/
 }
 
@@ -466,6 +467,7 @@ html body main #values div ul {
 
 html body main #values div ul li {
   background-color: #333333;
+  color: white;
   padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -491,9 +493,81 @@ html body main #values div ul li img {
 }
 
 html body main #values div ul li:hover {
-  background-color: black;
+  background-color: #680c3d;
   -webkit-transition: 0.5s;
   transition: 0.5s;
+}
+
+html body .modal_projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 2rem;
+}
+
+html body .modal_projects .illustration {
+  width: 45%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+html body .modal_projects div {
+  width: 48%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 0;
+}
+
+html body .modal_projects div p {
+  margin: 0;
+}
+
+html body .modal_projects div ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+html body .modal_projects div ul li {
+  margin-right: 1rem;
+}
+
+html body .modal_values {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 2rem;
+}
+
+html body .modal_values img {
+  width: 32%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  margin: 0;
+}
+
+html body .modal_values p {
+  width: 65%;
+  margin: 0;
 }
 
 html body footer {
@@ -559,7 +633,7 @@ html body footer ul li img {
 }
 
 .btn:hover {
-  background-color: black;
+  background-color: #680c3d;
   color: white;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -597,6 +671,8 @@ html body footer ul li img {
   position: fixed;
   left: 50%;
   top: 50%;
+  width: 1060px;
+  max-height: calc(100vh - 4rem);
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   display: none;
@@ -609,44 +685,6 @@ html body footer ul li img {
           align-items: center;
   background-color: #333333;
   padding: 3rem;
-}
-
-.modal div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.modal div img {
-  width: 50%;
-  margin-right: 2rem;
-}
-
-.modal div div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin: 0;
-}
-
-.modal div div p {
-  margin-top: 0;
-}
-
-.modal div div ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.modal div div ul a img {
-  margin: auto;
 }
 
 .modalDisplay {
@@ -776,6 +814,50 @@ html body footer ul li img {
   html body main #values article div img {
     width: 100%;
   }
+  html .modal {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  html .modal .modal_projects {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  html .modal .modal_projects .illustration {
+    margin-bottom: 2rem;
+    width: 60%;
+    max-height: 40vh;
+  }
+  html .modal .modal_projects div {
+    width: 100%;
+  }
+  html .modal .modal_projects div ul {
+    margin-top: 2rem;
+    width: 100%;
+  }
+  html .modal .modal_values {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  html .modal .modal_values img {
+    margin-bottom: 2rem;
+    width: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+  html .modal .modal_values p {
+    width: 100%;
+  }
   .btn {
     padding: 0.7rem;
     min-width: unset;
@@ -786,6 +868,9 @@ html body footer ul li img {
   html body main #home {
     -ms-grid-rows: 45% 25% 20% auto;
         grid-template-rows: 45% 25% 20% auto;
+  }
+  html body .modal {
+    width: calc(100vw - 4rem);
   }
   h1 {
     font-size: 5rem;
