--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@ $nav-height: 4rem;
 
 /* ------------------- COLORS -----------------------------*/
 $blue: #32b6ce;
+$pink: #680c3d;
 $primary-dark: #333333;
 $secondary-dark: #464646;
 
@@ -387,6 +388,7 @@ html {
       }
       
       /* ------------------- VALUES ---------------------------*/
+      
       #values{
         background-color: $secondary-dark;
         // height: calc(100vh - 2* $nav-height);
@@ -401,6 +403,7 @@ html {
   
             li {
               background-color: $primary-dark;
+              color: white;
               padding: 1rem;
               display: flex;
               flex-direction: column;
@@ -418,11 +421,65 @@ html {
 
             }
             li:hover{
-              background-color: black;
+              background-color: $pink;
               transition: $transition;
             }
           }
         }       
+      }
+    }
+
+    /* ------------------- MODALS ---------------------------*/
+    .modal_projects{
+      display: flex;
+      justify-content: space-between;
+      margin-top: 2rem;
+
+      .illustration{
+        width: 45%;
+        height: 100%;
+        object-fit: contain;
+      }
+
+      div{
+        width: 48%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        margin: 0;
+
+        p{
+          margin: 0;
+        }
+
+        ul{
+          display: flex;
+          margin: 0;
+          justify-content:space-around;
+
+          li{
+            margin-right: 1rem;
+          }
+        }
+      }
+    }
+
+
+    .modal_values{
+      display: flex;
+      justify-content: space-between;
+      margin-top: 2rem;
+  
+      img{
+        width: 32%;
+        height: 100%;
+        object-fit: cover;
+        margin: 0;
+      }
+
+      p{
+        width: 65%;
+        margin: 0;
       }
     }
 
@@ -478,7 +535,7 @@ html {
 }
 
 .btn:hover {
-  background-color: black;
+  background-color: $pink;
   color: white;
   transition: $transition;
 }
@@ -513,41 +570,14 @@ html {
   position: fixed;
   left: 50%;
   top: 50%;
+  width: 1060px;
+  max-height: calc(100vh - 4rem);
   transform: translate(-50%, -50%);
   display: none;
   flex-direction: column;
   align-items: center;
   background-color: $primary-dark;
   padding: 3rem;
-
-  div{
-    display: flex;
-
-    img{
-      width: 50%;
-      margin-right: 2rem;
-    }
-    div{
-      display: flex;
-      flex-direction: column;
-      margin: 0;
-
-      p{
-        margin-top: 0;
-      }
-
-      ul{
-        display: flex;
-        justify-content: space-around;
-
-        a{
-          img{
-            margin: auto;
-          }
-        }
-      }
-    }
-  }
 }
 
 .modalDisplay{
@@ -704,6 +734,46 @@ html {
         }
       }
     }
+
+    .modal{
+      width: fit-content;
+      // overflow: auto;
+
+      .modal_projects{
+        flex-direction: column;
+        align-items: center;
+  
+        .illustration{
+          margin-bottom: 2rem;
+          width: 60%;
+          max-height: 40vh;
+        }
+  
+        div{
+          width: 100%;
+
+          ul{
+            margin-top: 2rem;
+            width: 100%;
+          }
+        }
+      }
+
+      .modal_values{
+        flex-direction: column;
+        align-items: center;
+
+        img{
+          margin-bottom: 2rem;
+          width: 100%;
+          object-fit: contain;
+        }
+
+        p{
+          width: 100%;
+        }
+      }
+    }
   }
 
   .btn {
@@ -720,6 +790,11 @@ html {
           grid-template-rows: 45% 25% 20% auto;
         }
       }
+
+      .modal{
+        width: calc(100vw - 4rem);
+      }
+
     }
   }
   
